New update
fixed post words endpoint
